--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,26 +1,27 @@
 
 <%= image_tag "landing_image", class:" landing-page"%>
 
-<h1 class="t-white my-5">Darknet, The Best Experience Ever!</h1>
+<h1 class="t-white col text-center mt-5 t-white">Darknet</h1>
+<h4 class="t-white col text-center my-3 t-white">The Best Experience Ever!</h4>
 
-<div class="card">
-  <div class="card-header">
+<div class="card border-dark mt-5">
+  <div class="card-header bg-dark t-white ">
     Amazing Products on Offer!
   </div>
   <div class="card-body grey t-white">
     <h5 class="card-title">Are you looking for something?!</h5>
     <p class="card-text">There's no other marketplace in the world that has the breadth of products and passionate sellers as Darknet. We can offer a full spectrum of value because of this diverse community of sellers.</p>    
-    <%= link_to "Go shop now!", listing_path, class:"btn btn-light" %>
+    <%= link_to "Go shop now!", listing_path, class:"btn btn-info" %>
   </div>
 </div>
 
-<div class="card my-4">
-  <div class="card-header">
+<div class="card my-4 border-dark">
+  <div class="card-header bg-dark t-white">
     Quick Sale
   </div>
-  <div class="card-body grey t-white">
+  <div class="card-body grey t-white ">
     <h5 class="card-title">Are you selling something?!</h5>
     <p class="card-text">Darknet not only gives you discounted fees and free listings per month, you also get access to additional tools to manage and promote your business. Once you've sign up on Darknet, you can begin to advertise your products and services to let buyers know about the products you are selling.</p>
-    <%= link_to "Go sell now!", products_path, class:"btn btn-light" %>
+    <%= link_to "Go sell now!", products_path, class:"btn btn-info " %>
   </div>
 </div>
