--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -6,7 +6,7 @@
   <p class="lead"></p>
   <hr class="my-4">
 </div>
-<div class="bg-light p-3 mb-4">
+<div class="bg-light col col-sm-6 p-3 mb-4">
 <p>
   <strong>Title:</strong>
   <%= @product.title %>
