--- a/app/views/carts/index.html.erb
+++ b/app/views/carts/index.html.erb
@@ -1,7 +1,8 @@
 <div class="jumbotron">
   <h3 class="display-5">All Carts!</h3>
   <p class="lead"></p>
-  <hr class="my-4">
+  <hr class="my-3">
+  <%= link_to 'Continue Shopping', root_path, class:"btn btn-info btn-lg" %>
 </div>
 <div class="col-12 bg-light p-3">
   <div class="row">    
@@ -28,4 +29,4 @@
   <% end %>  
 </div>
 <br>
-<%= link_to 'Continue Shopping', root_path, class:"btn btn-info btn-lg btn-block my-3" %>
+
