--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -1,7 +1,8 @@
 <div class="jumbotron">
   <h3 class="display-5">My Cart!</h3>
   <p class="lead"></p>
-  <hr class="my-4">
+  <hr class="my-3">
+  <%= link_to 'Continue Shopping', root_path, class:"btn btn-info btn-lg" %>
 </div> 
 <div class="container">
   <% @cart_items.each do |item| %>
@@ -25,7 +26,7 @@
         <h6 class="row mx-auto">Price</h6>
         <p class="row mx-auto"><%= number_with_precision(item.price, precision: 2) %></p>
       </div>
-      <div class="row col-12 mx-auto mt-1 mb-3">      
+      <div class="d-flex col mx-auto mt-1 mb-3">      
         <%= link_to 'See', cart_item_show_path(item.id), class:"btn btn-primary btn-sm mr-1" %>
         <% if !@cart.payment.receipt_url%>
         <%= link_to 'Edit', cart_item_edit_path(item.id), class:"btn btn-warning btn-sm mr-1" %>
@@ -51,7 +52,7 @@
   <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
   <a href="<%= has_info? ? shipping_info_path : new_shipping_info_path %>"><button class="btn btn-primary btn-lg btn-block my-3 <%= user_signed_in? ? nil : "disabled" %>">Checkout!</button></a>
 <% end %>
-<%= link_to 'Continue Shopping', root_path, class:"btn btn-info btn-lg btn-block my-3" %>
+
 
 
 
