--- a/app/views/pages/listing.html.erb
+++ b/app/views/pages/listing.html.erb
@@ -53,7 +53,7 @@
       <%end%>
     </select> 
  
-    <button class="btn btn-outline-success col-3 w-100 " type="submit">
+    <button class="btn btn-info col-3 w-100 " type="submit">
       Search
     </button >
     </div>
@@ -85,14 +85,14 @@
                 <button type="button" class="close h-50" data-dismiss="alert" aria-hidden="true">&times;</button>
                   Saved!
               </div> 
-              <button onclick='addFavorites("<%= product.id%>")' class=" white border-light mx-2 rounded">
-                <i class="material-icons float-left text-left align-middle">favorite</i>
-                <small>Add Favorite</small>              
+              <button onclick='addFavorites("<%= product.id%>")' class=" white border-light mx-2 rounded p-1">
+                <i class="material-icons t-pink float-left text-left  align-middle">favorite</i>
+                <small class="t-pink">Add Favorite</small>              
               </button>  
                                   
             <%end%> 
             <%= link_to message_path(product.id) do %>
-              <button class=" mt-3 white border-light mx-2 rounded">
+              <button class=" mt-3 white border-info bg-info p-1 mx-2 rounded">
                 <i class="material-icons float-left align-middle ">question_answer</i>
                 <small>Ask Seller</small>              
               </button>
@@ -110,8 +110,7 @@
 <script>
   function addFavorites(id) {
     document.getElementById(id).style.display = 'block';  
- }
- 
+ } 
  function toggle(id,id2) {
   var x = document.getElementById(id);
   if (x.style.display === "none") {
