--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -36,13 +36,6 @@ body{
 .t-greem{color: green;}
 .t-pink{color: rgb(250, 122, 144);}
 .b-radius{border-radius: 5px;}
-.notice{
-  background-color: rgb(204, 252, 133);  
-  text-align: center;
-  color: green;
-  border-radius: 5px;
-  border-color: green;  
-}
 .jumbotron {
   background-color: #343A3F;
   color: #ffffff;
@@ -57,12 +50,49 @@ body{
   max-height: 900px;
   overflow-y: scroll;  
 }
+.footer {
+    position: relative;
+    bottom: 0;
+    width: 100%;
+    height: 70px;
+    line-height: 70px;
+    
+    background-color: #f5f5f5;
+}
 
+.landing-page {
+  /* Set rules to fill background */
+  min-height: 100%;
+  min-width: 1024px;
+  z-index: -1;
+	
+  /* Set up proportionate scaling */
+  width: 100%;
+  height: auto;
+	
+  /* Set up positioning */
+  position: fixed;
+  top: 0;
+  left: 0;
+}
 
+@media screen and (max-width: 1024px) { /* Specific to this particular image */
+  .landing-page {
+    left: 50%;
+    margin-left: -512px;   /* 50% */
+    z-index: -1;
+    
+  }
+}
 
 @media only screen and (max-width: 600px) {
   .jumbotron h3{
   font-size: 16px;
+}
+.footer{
+  height: 120px;
+  line-height: 60px;
+  
 }
 }
 
