--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,5 +1,5 @@
 <footer class="footer">
-  <div class="d-sm-flex d-inline col-12 p-0">
+  <div class="d-sm-flex d-inline col-12 p-0 mt-5">
 
     <div class="d-flex col p-0 col justify-content-around">
       <span class="text-muted my-auto">&copy; 2021 Darknet</span>
