--- a/app/views/user_mailer/welcome_email.html.erb
+++ b/app/views/user_mailer/welcome_email.html.erb
@@ -4,10 +4,10 @@
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
   <body>
-    <h1>Welcome to Darknet, <%= @user.email %></h1>
+    <h3>Welcome to Darknet, <%= @user.email %></h3>
     <p>
       You have successfully signed up to Ddarknet2.herokuapp.com,
-      your email is: <%= @user.email %>.<br>
+      your username is: <%= @user.username %>.<br>
     </p>
     <p>
       To login to the site, just follow this link: <%= @url %>.
