--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,10 +18,12 @@
 
  */
 @import "bootstrap";
-body{  
+body{   
   margin: 0;
   padding: 0;
-  box-sizing: border-box;}
+  box-sizing: border-box;
+}
+.box{min-height: calc(100vh - 120px); }
 .blue{background-color: blue;}
 .red{background-color: red;}
 .greem{color: green;}
@@ -50,13 +52,13 @@ body{
   max-height: 900px;
   overflow-y: scroll;  
 }
+
 .footer {
     position: relative;
-    bottom: 0;
     width: 100%;
+    bottom: 0;
     height: 70px;
-    line-height: 70px;
-    
+    line-height: 70px;    
     background-color: #f5f5f5;
 }
 
