--- a/app/views/cart_item/show.html.erb
+++ b/app/views/cart_item/show.html.erb
@@ -1,15 +1,16 @@
 <div class="container" style="max-width: 36rem;">
   <div class="jumbotron">
     <h3 class="display-5">MyCart Item!</h3>
-    <p class="lead"></p>
-    <hr class="my-4">
+    <hr class="my-3">
     <div class="d-flex justify-content-between">
-     <%= link_to message_path(@product.id) do %>
-              <button class=" mt-3 bg-info border-info p-1 mx-2 rounded">
-                <i class="material-icons float-left align-middle ">question_answer</i>
-                <small>Ask Seller</small>              
-              </button>
-              <%end%> <%= link_to "Back" , cart_path(@cart_item.cart_id), class:" mt-3 bg-info border-info px-3 py-1 mx-2 rounded t-black" %></div>
+      <%= link_to message_path(@product.id) do %>
+        <button class="bg-info border-info p-1 mx-2 rounded">
+          <i class="material-icons float-left align-middle ">question_answer</i>
+          <small>Ask Seller</small>              
+        </button>
+      <%end%> 
+      <%= link_to "Back" , cart_path(@cart_item.cart_id), class:" bg-info border-info px-3 py-1 mx-2 rounded t-black" %>
+    </div>
   </div>
   <div class="card m-auto mb-5">
     <%= image_tag @product.picture, class:"card-img-top"%>
