--- a/app/views/favorite/index.html.erb
+++ b/app/views/favorite/index.html.erb
@@ -1,11 +1,10 @@
-<div class="jumbotron">
+<div class="jumbotron mb-5">
   <h3 class="display-5">My Favorites!</h3>
-  <p class="lead"></p>
   <hr class="my-3">
-  <%= link_to "Go back!", listing_path, class:"btn btn-info mt-3" %> 
+  <%= link_to "Go back!", listing_path, class:"btn btn-info" %> 
 </div>
 <div class="container">
-  <div class="d-flex  bg-light h-100 b-radius row justify-content-around my-3">
+  <div class="d-flex  bg-light h-100 b-radius row justify-content-around my-4">
     <% if @favorites %>
       <% @favorites.each do |f|%>
         <div class="card my-3 p-0" style="width: 10rem;height: 25rem">      
