--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,14 +13,15 @@
   </head>
 
   <body>
-         
-    <%= render "shared/navbar" %>
-    <div class="container w-50"  > 
-      <div class="btn-warning rounded position-absolute text-center mt-2" style="z-index:1"><%= notice %></div>
-      <div class="btn-info rounded text-center mt-2" style="z-index:1"><%= alert %></div>
-    </div> 
-    <div class="container">
-      <%= yield %>
+    <div class="box">    
+      <%= render "shared/navbar" %>
+      <div class="container w-50"> 
+        <div class="btn-warning rounded position-absolute text-center mt-2" style="z-index:1"><%= notice %></div>
+        <div class="btn-info rounded text-center mt-2" style="z-index:1"><%= alert %></div>
+      </div> 
+      <div class="container">
+        <%= yield %>
+      </div> 
     </div> 
     <%= render "shared/footer" %>
   </body>
