--- a/app/views/payment/success.html.erb
+++ b/app/views/payment/success.html.erb
@@ -1,7 +1,6 @@
 <div class="jumbotron">
   <h3 class="display-5">Payment Success!</h3>
-  <p class="lead"></p>
-  <hr class="my-4">
-  <%= link_to 'Go back homepage', root_path, class:"btn btn-info btn-lg btn-sm my-3" %>
+  <hr class="my-3">
+  <%= link_to 'Go back homepage', root_path, class:"btn btn-info" %>
 </div>
-<p>Payment Successfuly processed, <strong></strong><%= link_to "Click here to see your receipt", @cart.payment.receipt_url, target: :_blank %> !</strong></p>
+<p>Payment Successfuly processed, <strong></strong><%= link_to "View your receipt", @cart.payment.receipt_url, target: :_blank %> !</strong></p>
