--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -3,7 +3,7 @@
   <%= f.error_notification %>
   <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
 
-  <div class="form-inputs bg-light p-3">      
+  <div class="form-inputs bg-light p-3 mx-auto col-lg-8">      
     <p class="mt-3"><%= f.input :title %></p>
     <p class="mt-3"><%= f.input :description %></p>
     <p class="mt-3"><%= f.input :price %></p>
