--- a/app/views/products/dashboard.html.erb
+++ b/app/views/products/dashboard.html.erb
@@ -1,12 +1,11 @@
 <div class="jumbotron mt-5">
   <h3 class="display-5">Dashboard</h3>
-  <p class="lead"></p>
-  <hr class="my-4">
+  <hr class="my-3">
   <a href="#inbox">
-  <button class=" col-7 col-sm-6 col-md-4 col-lg-3 mt-3 bg-info border-info mx-1 rounded">
-    <i class="material-icons float-left align-middle ">dashboard</i>
-    <small> Go To Inbox</small>              
-  </button>
+    <button class=" col-7 col-sm-6 col-md-4 col-lg-3 bg-info border-info mx-1 rounded">
+      <i class="material-icons float-left align-middle ">dashboard</i>
+      <small> Go To Inbox</small>              
+    </button>
   </a> 
 </div>
 <div class="dash d-flex col row">
@@ -26,16 +25,17 @@
   <div id="inbox" class="dash rounded col-0 col-md-4 grey container p-3" >
     <h3 class="t-white py-2">My Inbox</h3>
     <% @message_list.each do |item| %>
-    <div class="col-12 rounded p-3 bg-light my-2">
-      <p class="text-truncate col">Buyer: <%= item.user.username%></p>
-      <p class="text-truncate col">product: <%= item.product.title%></p>
-      <p class="text-truncate col">Date: <%= item.created_at.strftime('%a, %d %b %Y %H:%M:%S')%></p>
-    <%= link_to get_message_path(item.product.id, item.user.id) do %>
-      <button class=" mt-3 white bg-info p-1 border-light mx-2 rounded">
-        <i class="material-icons float-left align-middle ">question_answer</i>
-        <small>Answer Buyer</small>              
-      </button>
-      </div>
+      <div class="col-12 rounded p-3 bg-light my-2">
+        <p class="text-truncate col">Buyer: <%= item.user.username%></p>
+        <p class="text-truncate col">product: <%= item.product.title%></p>
+        <p class="text-truncate col">Date: <%= item.created_at.strftime('%a, %d %b %Y %H:%M:%S')%>
+        </p>
+        <%= link_to get_message_path(item.product.id, item.user.id) do %>
+          <button class=" mt-3 white bg-info p-1 border-light mx-2 rounded">
+            <i class="material-icons float-left align-middle ">question_answer</i>
+            <small>Answer Buyer</small>              
+          </button>
+        </div>
       <%end%> 
     <%end%> 
   </div>
