--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -1,11 +1,8 @@
-<div class="jumbotron">
+<div class="jumbotron mx-auto col-lg-8">
   <h3 class="display-5">Edit Product!</h3>
-  <p class="lead"></p>
-  <hr class="my-4">
+  <hr class="my-3">
+  <%= link_to 'Back', products_path, class:"btn btn-info btn-md" %>
 </div>
 <%= render 'form', product: @product %>
 
-  <div class="bg-light p-3"> 
-  <%= link_to 'Back', products_path, class:"btn btn-secondary btn-lg btn-block mb-5" %>
-  </div>
-
+  
