--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,9 +1,9 @@
-<div class="jumbotron">
-  <h3 class="display-4">Add New Product!</h3>
-  <p class="lead"></p>
-  <hr class="my-4">
+<div class="jumbotron mx-auto col-lg-8">
+  <h3 class="display-5">Add New Product!</h3>
+  <hr class="my-3">
+  <%= link_to 'Back', products_path, class:"btn btn-info" %>
 </div>
 
 <%= render 'form', product: @product %>
-<%= link_to 'Back', products_path, class:"btn btn-secondary mt-3 mb-5 " %>
+
 
