--- a/app/views/shipping_info/edit.html.erb
+++ b/app/views/shipping_info/edit.html.erb
@@ -1,13 +1,14 @@
-<div class="jumbotron">
+<div class="jumbotron col col-md-8 mx-auto">
   <h3 class="display-5">Edit Shipping Details!</h3>  
-  <hr class="my-4">
+  <hr class="my-3">
+  <%= link_to 'Back!', shipping_info_path(1), class:"btn btn-info " %>
 </div>
 
 <%= simple_form_for(@shipping_info, :url => update_info_path(current_user.id), method: "PUT") do |f| %>
   <%= f.error_notification %>
   <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
 
-  <div class="form-inputs bg-light p-3">   
+  <div class="form-inputs bg-light p-3 col col-md-8 mb-5 mx-auto">   
     <%= hidden_field_tag :authenticity_token, form_authenticity_token -%>     
     <p class="mt-3"><%= f.input :unit %></p>
     <p class="mt-3"><%= f.input :street_number %></p>
@@ -15,8 +16,6 @@
     <p class="mt-3"><%= f.input :suburb %></p>
     <p class="mt-3"><%= f.input :postcode %></p>
     <p class="mt-3"><%= f.input :phone %></p>
-    <%= f.button :submit,"Save!", class:"btn btn-primary btn-lg btn-block mt-3 mb-3 " %> 
+    <%= f.button :submit,"Save!", class:"btn btn-primary mt-3 mb-3 " %> 
   </div> 
 <% end %>
-
-<%= link_to 'Back!', shipping_info_path(1), class:"btn btn-secondary btn-lg btn-block my-4" %>
