--- a/app/views/shipping_info/new.html.erb
+++ b/app/views/shipping_info/new.html.erb
@@ -1,13 +1,12 @@
-<div class="jumbotron">
-  <h3 class="display-5">Save My Shipping Details!</h3>
-  <p class="lead"></p>
-  <hr class="my-4">
+<div class="jumbotron col col-md-8 mx-auto">
+  <h3 class="display-5">Save My Shipping Details!</h3>  
+  <hr class="my-3">
+  <%= link_to 'Continue Shopping', listing_path, class:"btn btn-info" %>
 </div>
 <%= simple_form_for(@shipping_info, :url => create_shipping_info_path ) do |f| %>
   <%= f.error_notification %>
   <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
-
-  <div class="form-inputs">    
+  <div class="form-inputs col col-md-8 mx-auto bg-light p-3 mb-5">    
     <%= hidden_field_tag :authenticity_token, form_authenticity_token %>  
     <p class="mt-3"><%= f.input :unit, required: true %></p>
     <p class="mt-3"><%= f.input :street_number, required: true %></p>
@@ -15,6 +14,6 @@
     <p class="mt-3"><%= f.input :suburb, required: true %></p>
     <p class="mt-3"><%= f.input :postcode, required: true %></p>
     <p class="mt-3"><%= f.input :phone, required: true %></p>
-  <%= f.button :submit, 'Save', class:"btn btn-info btn-lg btn-block mt-3 mb-3 " %> 
+    <%= f.button :submit, 'Save', class:"btn btn-info btn-lg btn-block mt-3 mb-3 " %> 
   </div> 
 <% end %>
