--- a/app/views/shipping_info/show.html.erb
+++ b/app/views/shipping_info/show.html.erb
@@ -1,20 +1,23 @@
-<div class="jumbotron">
+<div class="jumbotron col col-md-8 mx-auto">
   <h3 class="display-5">My Shipping Details!</h3>  
-  <hr class="my-4">
+  <hr class="my-3">
+  <%= link_to 'Edit shipping Details!', edit_shipping_info_path, class:"btn btn-info" %>
 </div>
-<%= simple_form_for(@shipping_info) do |f| %>
-  <div class="form-inputs bg-light p-3">        
-    <p class="mt-3"><%= f.input :unit, disabled: true %></p>
-    <p class="mt-3"><%= f.input :street_number, disabled: true %></p>
-    <p class="mt-3"><%= f.input :street_name, disabled: true %></p>
-    <p class="mt-3"><%= f.input :suburb, disabled: true %></p>
-    <p class="mt-3"><%= f.input :postcode, disabled: true %></p>
-    <p class="mt-3"><%= f.input :phone, disabled: true %></p>
-  </div>   
-<% end %>
-  <button class="btn btn-primary btn-lg btn-block my-3 <%= user_signed_in? ? nil : "disabled" %>" data-stripe="payment">Confirm Shipping Details!</button>
-  
-  <%= link_to 'Edit shipping Details!', edit_shipping_info_path, class:"btn btn-warning btn-lg btn-block mt-3 mb-5" %>
+<div class="bg-light mb-5 col col-md-8 mx-auto">
+  <%= simple_form_for(@shipping_info) do |f| %>
+    <div class="form-inputs p-3 ">        
+      <p class="mt-3"><%= f.input :unit, disabled: true %></p>
+      <p class="mt-3"><%= f.input :street_number, disabled: true %></p>
+      <p class="mt-3"><%= f.input :street_name, disabled: true %></p>
+      <p class="mt-3"><%= f.input :suburb, disabled: true %></p>
+      <p class="mt-3"><%= f.input :postcode, disabled: true %></p>
+      <p class="mt-3"><%= f.input :phone, disabled: true %></p>
+    </div>   
+  <% end %>
+  <div class="d-flex ">
+    <button class="btn btn-primary btn-lg mx-auto mb-5  <%= user_signed_in? ? nil : "disabled" %>" data-stripe="payment">Confirm Shipping Details!</button> 
+  </div> 
+</div>  
 
 <script src="https://js.stripe.com/v3/"></script>
 <script>
