--- a/app/views/user_mailer/receipt_email.text.erb
+++ b/app/views/user_mailer/receipt_email.text.erb
@@ -1,9 +1,9 @@
-Welcome to example.com, 
+Welcome to darknet.com, <%= @user.email %>
 ===============================================
 
-You have successfully signed up to example.com,
-your username is: .
+You have successfully signed up to <%= @url %>,
+your username is: <%= @user.username %> .
 
-To login to the site, just follow this link: .
+To login to the site, just follow this link: <%= @url %>.
 
 Thanks for joining and have a great day!
