--- a/app/views/products/show_message.html.erb
+++ b/app/views/products/show_message.html.erb
@@ -1,5 +1,5 @@
 <div class="jumbotron mx-auto col-lg-8">
-  <h3 class="display-5">How can I help you?</h3>
+  <h3 class="display-5">Replying to Client!</h3>
   <hr class="my-3">
   <%= link_to "Go back!", dashboard_path, class:"btn btn-info" %> 
 </div>
@@ -12,6 +12,7 @@
   <form id="myForm" action="<%= message_post_path%>" method="POST" onsubmit="submitForm()">
     <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token%>">
     <input type="hidden" name="product_id" value="<%= @messages[0].product_id%>">
+    <input type="hidden" name="user_id" value="<%= @messages[0].user_id%>">
     <div class="form-group">
       <label class="mt-5">send a message</label>
       <textarea id="txt_1" name="message" rows="3" class="col" onkeyup='saveValue(this)'></textarea>
@@ -26,7 +27,7 @@
 // Some JS to refresh page every 10secs in order to fetch any new messages
   setTimeout(function(){
     window.location.reload(1);
-  }, 3000);
+  }, 10000);
 
 // Some JS to clear field value after posting 
   function submitForm() {
