--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -12,7 +12,8 @@
     <p class="mt-3"><%= f.input :delivery_estimated, label: 'Delivery estimated (Days)' %></p>
     <p class="mt-3"><%= f.input :quantity_available %></p>
     <p class="mt-3"><%= f.association :category %></p>
-    <p class="mt-4"><%= f.file_field :picture, accept: 'image/png, image/jpg, image/jpeg' %></p>  
+    <p class="mt-4"><%= f.file_field :picture, accept: 'image/png, image/jpg, image/jpeg'%></p>
+    <span class="text-muted">* Only png and jpg format accepted. Size must be from 500Kb to 2Mb.</span>  
     <%= f.button :submit, class:"btn btn-info btn-lg btn-block mt-5 " %> 
   </div> 
 <% end %>
