--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -2,38 +2,29 @@
 <nav class="navbar navbar-expand navbar-dark bg-dark">
   <div class="container">
     <div class=" d-flex col-12 p-0">
-    <%= link_to "Dark Net", root_path, class:"navbar-brand  col-3 col-sm-6 justify-content-start my-auto mx-0 p-0 " %>   
-    <div class="collapse justify-content-end navbar-collapse mx-0 p-0 col-9 col-sm-6" id="navbarNav">
+    <%= link_to "Dark Net", root_path, class:"navbar-brand col-3 col-sm-6 justify-content-start my-auto mx-0 p-0 pb-2 " %>   
+      <div class="collapse justify-content-around navbar-collapse mx-0 p-0 col-9 col-sm-6" id="navbarNav">
         <ul class="navbar-nav  ">
           <li class="nav-item">
             <%= link_to "Buy", listing_path, class:"nav-link" %>
           </li>
           <li class="nav-item">
             <%= link_to "Sell", products_path, class:"nav-link" %>
+          </li>          
+          <li class="nav-item"><%= link_to 'Favorites', favorite_index_path, class:"nav-link" %>
           </li>
-          
-        <li class="nav-item"><%= link_to material_icon.favorite, favorite_index_path, class:"nav-link" %>
-        </li>
-
-        <li class="nav-item"><%= link_to material_icon.shopping_cart, carts_path, class:"nav-link" %>
-        </li>      
-          
-        <% if user_signed_in? %>
-        <li class="nav-item">
-    <span class="nav-link">
-      
-    </span>
-    </li>
-    <li class="nav-item">
-    <%= link_to "Logout", destroy_user_session_path, method: "delete",class:"nav-link" %>
-  <% else %>
-   <%= link_to "Login", new_user_session_path, class:"nav-link" %>
-  <% end %>
-      </li>
-      
-    </ul>
-  </div>
-  </div>
+          <li class="nav-item"><%= link_to material_icon.shopping_cart, carts_path, class:"nav-link" %>
+          </li>   
+          <li class="nav-item">           
+            <% if user_signed_in? %>
+              <%= link_to "Logout", destroy_user_session_path, method: "delete",class:"nav-link" %>
+            <% else %>
+              <%= link_to "Login", new_user_session_path, class:"nav-link" %>
+            <% end %>
+          </li>      
+        </ul>
+      </div>
+    </div>
   </div>
 </nav>
 
